--- a/test/fixtures/letters.yml
+++ b/test/fixtures/letters.yml
@@ -9,3 +9,19 @@ one: {}
 #
 two: {}
 # column: value
+
+# == Schema Information
+#
+# Table name: letters
+#
+#  id         :integer          not null, primary key
+#  content    :text
+#  contact_a  :string
+#  contact_b  :string
+#  posted     :boolean          default(FALSE)
+#  confirmed  :boolean          default(FALSE)
+#  effect     :boolean          default(FALSE)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  user_id    :integer
+#
